# finalProject_group53

./: CHANGELOG.md  README.md  audio test.py  audio_controller.py  audio_model.py  audio_view.py  convert_to_wav.py  log.txt  model.py  modifierFunctions.py  mvc_audio.py  openFile.py  pyproject.toml  removeMetadata.py  requirements.txt  setup.cfg
